Refactor README for clarity and organization